--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hey-api/client-fetch": "^0.2.4",
     "axios": "^1.7.7",
+    "pinia": "^2.2.2",
     "vue": "^3.4.37"
   },
   "devDependencies": {
