--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@eslint/js": "^9.10.0",
     "@hey-api/openapi-ts": "^0.53.0",
+    "@types/eslint__js": "^8.42.3",
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.10.0",
+    "eslint-plugin-vue": "^9.28.0",
     "postcss": "^8.4.45",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.4.0",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
