--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "openapi-ts": "openapi-ts"
+    "openapi-ts": "openapi-ts",
+    "lint": "eslint . --no-fix --ignore-pattern .gitignore",
+    "lint:fix": "eslint . --fix --ignore-pattern .gitignore",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@hey-api/client-fetch": "^0.2.4",
     "axios": "^1.7.7",
+    "eslint-plugin-prettier": "^5.2.1",
     "pinia": "^2.2.2",
     "vue": "^3.4.37"
   },
@@ -22,8 +26,11 @@
     "@vitejs/plugin-vue": "^5.1.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.10.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.28.0",
     "postcss": "^8.4.45",
+    "prettier": "3.3.3",
+    "prettier-eslint": "^16.3.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.6.2",
     "typescript-eslint": "^8.4.0",
